add some config

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,29 +11,11 @@ spring:
     password: dxzctziaxgijcvtn
     port: 587
 
-  security:
-    oauth2:
-      client:
-        registration:
-          facebook:
-            client-id: 515842626817886
-#            redirectUri: "{baseUrl}/oauth2/callback/{registrationId}"
-            client-secret: ec2ba4897ae1c0224df7c48295b572d2
-#            scope:
-#              - email
-#              - profile
-          google:
-            client-id: 1041545973974-6fhlfpt6pv44fukk40s34qh86j5pj6uk.apps.googleusercontent.com
-            client-secret: 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
-#            scope:
-#              - email
-#              - public_profile
-
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    password: 5599
-    username: root
-    url: jdbc:mysql://localhost:3306/simple_bank
+    url: jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
   jpa:
     show-sql: false
     hibernate:
@@ -41,3 +23,4 @@ spring:
 server:
   error:
     include-message: always
+
